<?xml version="1.0"?>
<package format="2">
  <name>franka_robot_controller_pi</name>
  <version>0.0.1</version>
  <description>franka_robot_controllers provides code for controlling Franka robot with ros_control</description>
  <maintainer email="berk.tepebag@gmail.com">Berk Tepebag</maintainer>
  <license>Apache 2.0</license>

  <url type="website">https://twitter.com/berk_tepebag</url>
  <url type="repository">https://github.com/berktepebag/franka_robot_controllers</url>
  <url type="bugtracker">https://github.com/berktepebag/franka_robot_controllers/issues</url>
  <author>Berk Tepebag</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/franka_robot_controllers_plugin.xml"/>
  </export>
</package>
